Allow uppercase in class attribute

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 
 * Allow quotes in styles so you can do things like listing font-families. [Jason Garber]
 * Fix uninitialized constant Gem::Specification::PLATFORM_CROSS_TARGETS in Rails [Jason Garber]
-* Allow uppercase letters in ID attribute even though it's invalid [Jason Garber]
+* Allow uppercase letters in class and ID attributes even though it's invalid [Jason Garber]
 * Fix compatibility with newer Echoe, by using full-name for Platform [Flameeyes]
 * Fixes for PPC/PPC64 [Flameeyes]
 * Added a modified copy of 'Textile Reference' to a doc folder [codesponge]
