--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-=== Edge
+=== 4.2.3 / March 1, 2010
 
 * Allow quotes in styles so you can do things like listing font-families. [Jason Garber]
 * Fix uninitialized constant Gem::Specification::PLATFORM_CROSS_TARGETS in Rails [Jason Garber]
