--- a/README
+++ b/README
@@ -42,13 +42,12 @@ indicates in which language your copy of RedCloth is compiled.
 === Compiling gems
 
 To compile MRI, JRuby, and win32 gems, you need rvm and rake-compiler. These
-and other dependencies can be installed with bundler. Then rake gems:build
+and other dependencies can be installed with bundler. Then rake build:all
 takes care of compiling and packaging all gems.
 
 # gem install bundler
 # bundle install
-# rake rvm:bundle
-# rake gem:all
+# rake build:all
 
 == Bugs
 
