--- a/README
+++ b/README
@@ -27,17 +27,17 @@ compiled from C sources automatically when you install the gem on the ruby
 platform. Precompiled binary gems are provided for JRuby and Win32 platforms.
 
 RedCloth can be compiled with <tt>rake compile</tt>. Ragel 6.3 or greater is
-needed to build, compile, and package RedCloth. Again, Ragel is NOT needed to
-simply use RedCloth.
+required. Again, Ragel is NOT needed to simply use RedCloth.
 
 === Supported platforms
 
-By default, the rake compile task builds a native C Ruby extension that works
-with Ruby 1.8 or 1.9 or a Java extension for JRuby 1.3. A pure Ruby version
-can also be generated, but not easily because the parser it produces is slow
-and incompatible with Ruby 1.9. The JRuby and pure-Ruby extensions don't
-support multi-byte characters. The RedCloth::EXTENSION_LANGUAGE constant
-indicates in which language your copy of RedCloth is compiled.
+By default, the rake compile task builds a native C extension (MRI 1.8 or 1.9)
+or Java extension (JRuby 1.3). A pure Ruby version can also be generated, but
+it's super slow and Ruby 1.8-only. The JRuby and pure-Ruby extensions don't
+support multi-byte characters. Cross-compiling for win32 uses rake-compiler.
+
+The RedCloth::EXTENSION_LANGUAGE constant indicates in which language your
+copy of RedCloth is compiled.
 
 === Compiling gems
 
@@ -57,7 +57,7 @@ Please submit bugs to http://jgarber.lighthouseapp.com/projects/13054-redcloth/o
 
 == Using RedCloth
 
-RedCloth is simply an extension of the String class, which can handle
+RedCloth is simply an extension of the String class that can handle
 Textile formatting.  Use it like a String and output HTML with its
 RedCloth#to_html method.
 
