--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 === *edge*
 
 * Allow attributes to be set on hr and br tags [Jesse Stormier]
+* Fix dangling <li> [Stephen Bannasch]
 * Switch to bundler and rake-compiler for gem management/compilation
 * Fix invalid YAML for Ruby 1.9.2 [Aaron Patterson]
 
