--- a/README.rdoc
+++ b/README.rdoc
@@ -45,11 +45,11 @@ To compile MRI, JRuby, and win32 gems, you need rvm and rake-compiler. These
 and other dependencies can be installed with bundler. Then rake build:all
 takes care of compiling and packaging all gems.
 
-# gem install bundler
-# bundle install
-# rake-compiler cross-ruby VERSION=1.8.6-p398
-# rake-compiler cross-ruby VERSION=1.9.1-p243
-# rake build:all
+  1. gem install bundler
+  2. bundle install
+  3. rake-compiler cross-ruby VERSION=1.8.6-p398
+  4. rake-compiler cross-ruby VERSION=1.9.1-p243
+  5. rake build:all
 
 == Bugs
 
