fix bug related to the command line consumption of the optional port
This means you can no longer specify the port, which is annoying,
but it doesn't break backwards compatibility with the common
redcloth as a translator usage. I don't play with enough ruby to
know if optparse can backtrack and I don't have time to
make it backtrack, so for now, this will have to do.

--- a/README.rdoc
+++ b/README.rdoc
@@ -78,6 +78,7 @@ Alternatively, you may use the redcloth script as a server when writing
 a textile document by executing the following from the command line:
 
   > redcloth --server Document.textile
+  > google-chrome http://localhost:7013
 
 == What is Textile?
 
