--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,12 @@
-= Specifics of this RedCloth fork
-
-This RedCloth fork fixes CVE-2012-6684 as
-{reported by Kousuke Ebihara}(http://co3k.org/blog/redcloth-unfixed-xss-en)
-using a {patch by Antonio Terceiro}(http://sources.debian.net/src/ruby-redcloth/4.2.9-4/debian/patches/0001-Filter-out-javascript-links-when-using-filter_html-o.patch/)
-
-Read on below for the original RedCloth documentation
-
 = RedCloth - Textile parser for Ruby
 
 Homepage::  http://redcloth.org
 Author::    Jason Garber
+Maintainer:: Joshua Siler https://github.com/joshuasiler
 Copyright:: (c) 2011 Jason Garber
 License::   MIT
+
+<img src="https://travis-ci.org/jgarber/redcloth.svg" />
 
 (See http://redcloth.org/textile/ for a Textile reference.)
 
