--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,7 @@ Maintainer:: Joshua Siler https://github.com/joshuasiler
 Copyright:: (c) 2011 Jason Garber
 License::   MIT
 
-{<img src="https://travis-ci.org/jgarber/redcloth.svg" />}[https://travis-ci.org/jgarber/redcloth]
+{<img src="https://travis-ci.org/jgarber/redcloth.svg" />}[https://travis-ci.org/jgarber/redcloth] {<img src="https://codeclimate.com/github/jgarber/redcloth/badges/gpa.svg" />}[https://codeclimate.com/github/jgarber/redcloth]
 
 (See http://redcloth.org/textile/ for a Textile reference.)
 
