--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 4.3.2 / May 23rd, 2016
+
+* Fix additional case for CVE-2012-6684 [Joshua Siler]
+
 == 4.3.1 / May 17th, 2016
 
 * Fix additional case for CVE-2012-6684 [Joshua Siler]
