--- a/README.rdoc
+++ b/README.rdoc
@@ -171,6 +171,12 @@ Example:
 Will become:
 
  <acronym title="American Civil Liberties Union">ACLU</acronym>
+ 
+== Filtering HTML
+
+RedCloth doesn't filter unsafe html tags by default, do to this use the following syntax
+  RedCloth.new("<script>alert(1)</script>", [:filter_html]).to_html
+which will strip the script tags from the resulting HTML
 
 == Adding Tables
 
