--- a/README.rdoc
+++ b/README.rdoc
@@ -174,9 +174,10 @@ Will become:
  
 == Filtering HTML
 
-RedCloth doesn't filter unsafe html tags by default, do to this use the following syntax
+RedCloth doesn't filter unsafe html tags by default, do to this use the following syntax:
   RedCloth.new("<script>alert(1)</script>", [:filter_html]).to_html
-which will strip the script tags from the resulting HTML
+which will filter the script tags from the HTML resulting in:
+  "&lt;script&gt;alert(1)&lt;/script&gt;"
 
 == Adding Tables
 
