--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,13 @@
+== 4.3.4
+
+* Add GitHub action [Anton Maminov]
+
 == 4.3.3 / Nov 2nd, 2023
 
 * Add tests for CVE-2023-31606 [Helio Cola]
 * Fix rake compile [Helio Cola and Faria Education Group]
 * Fix CVE-2023-31606 (ReDOS possible in the sanitize_html function) [Kornelius Kalnbach and Merbin Russel]
+* Immutable strings [Matijs van Zuijlen]
 
 == 4.3.2 / May 23rd, 2016
 
